Fix Quantity Label not showing when JetPack is active

--- a/src/assets/scss/templates/_single-product.scss
+++ b/src/assets/scss/templates/_single-product.scss
@@ -87,6 +87,9 @@
 				width: auto;
 
 				color: #fff;
+
+				// Fix for when Jetpack is active
+				clip-path: none;
 			}
 
 		}
